Fix to stretched thumbnail

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -90,8 +90,8 @@ body .h1, body .h2, body .h3, body .h4, body .h5, body .h6, body h1, body h2, bo
     grid-template-columns: auto auto;
 }
 .thumbnail-image {
-    width: 40px;
-    height: 32px;
+    width: 25px;
+    height: 25px;
 }
 //navigation
 .homepage-navigation {
